--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "build": "next build"
   },
   "dependencies": {
+    "axios": "^0.26.0",
+    "classnames": "^2.3.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "redux": "^4.1.2",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
