--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "next": "latest",
+    "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.49.9"
   },
   "devDependencies": {
