--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "next": "latest",
+    "next-auth": "^4.2.1",
     "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,3 +23,4 @@
     "nodemon": "^2.0.15"
   }
 }
+
