--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
     "build": "next build"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.4.3",
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
+    "config": "^3.3.7",
+    "jsonwebtoken": "^8.5.1",
     "next": "latest",
     "next-auth": "^4.2.1",
     "next-redux-wrapper": "^7.0.5",
+    "prisma": "^3.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -23,4 +29,3 @@
     "nodemon": "^2.0.15"
   }
 }
-
