--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "build": "next build"
   },
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.8.1",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.4.3",
+    "@mui/styles": "^5.4.4",
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "config": "^3.3.7",
