--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   react-app:
-    image: dehef-blog-next
+    image: cesarmarteldev/dehef-blog-next
     stdin_open: true
     ports:
       - "3000:3000"
